<resources>
    <string name="app_name">Video To Image</string>
    <string name="tv_select_video">Select Video</string>
    <string name="tv_gallery">Gallery</string>
    <string name="tv_setting">Setting</string>
    <string name="tv_slideshow_maker">Slideshow Maker</string>
    <string name="tv_share">Share</string>
    <string name="tv_rate">Rate</string>
    <string name="tv_about_us">About us</string>
    <string name="tv_status_info">Status Quotes</string>
    <string name="tv_author">Author</string>
    <string name="tv_author_name">Phạm Minh Tân</string>
    <string name="tv_privacy_policy">Privacy Policy</string>
    <string name="tv_privacy_policy_info">Link Privacy Policy</string>
    <string name="tv_email">Email</string>
    <string name="tv_email_link">minhtan98.vn@gmail.com</string>
    <string name="tv_title_tb_selectfoler">Video Folder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>