<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:background="@drawable/background_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constrain_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_select_video"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="@dimen/marginBtnMain"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_select_video"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_btn_select_video"
                android:padding="20dp"
                android:src="@drawable/ic_video"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_select_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/tv_select_video"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/btn_select_video"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_gallery"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="@dimen/marginBtnMain"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constrain_select_video">

            <ImageView
                android:id="@+id/btn_gallery"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_btn_gallery"
                android:padding="20dp"
                android:src="@drawable/ic_gallery"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/tv_gallery"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/btn_gallery"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_slideshow_maker"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="@dimen/marginBtnMain"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constrain_gallery">

            <ImageView
                android:id="@+id/btn_slideshow_maker"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_btn_slideshow_maker"
                android:padding="20dp"
                android:src="@drawable/ic_slideshow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_slideshow_maker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/tv_slideshow_maker"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/btn_slideshow_maker"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_setting"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="@dimen/marginBtnMain"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constrain_slideshow_maker">

            <ImageView
                android:id="@+id/btn_setting"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_btn_setting"
                android:padding="20dp"
                android:src="@drawable/ic_setting"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/tv_setting"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/btn_setting"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#8E8E8E"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/constrain_bottom"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_bottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_share"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/constrain_rate">
            <ImageView
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/ic_share"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/tv_share"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_share"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_rate"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/constrain_share"
            app:layout_constraintRight_toLeftOf="@id/constrain_about_us"
            app:layout_constraintBottom_toBottomOf="parent">
            <ImageView
                android:id="@+id/btn_rate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/ic_rate"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/tv_rate"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_rate" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_about_us"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/constrain_rate"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <ImageView
                android:id="@+id/btn_about_us"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/ic_about_us"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/tv_about_us"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_about_us"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>